Bug 107762 - admin-console: memory graph is not working in 'Analytics' tab
Summary: admin-console: memory graph is not working in 'Analytics' tab
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice Online
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks: LOOL-Admin-Console
  Show dependency treegraph
 
Reported: 2017-05-11 06:49 UTC by Pranav Kant
Modified: 2019-02-03 05:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pranav Kant 2017-05-11 06:49:10 UTC
Its a regression, it used to work before.
Comment 1 Aditya Dewan 2017-05-16 10:22:07 UTC
https://gerrit.libreoffice.org/37672
Comment 2 Pranav Kant 2017-05-16 11:08:01 UTC
Thanks Aditya.
Comment 3 Commit Notification 2017-05-16 15:56:17 UTC
Aditya Dewan committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/online/commit/?id=f94b42d9a8de3c0f9269fc94659707e147d04512

tdf#107762 admin-console: memory graph in 'Analytics' tab now working